@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2025 Vaadin Ltd.
+ * Copyright 2000-2026 Vaadin Ltd.
  *
  * Licensed under the Apache License, Version 2.0 (the "License"); you may not
  * use this file except in compliance with the License. You may obtain a copy of
@@ -19,17 +19,16 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 import net.jcip.annotations.NotThreadSafe;
-import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.experimental.categories.Category;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import org.slf4j.Logger;
 import tools.jackson.databind.JsonNode;
@@ -39,37 +38,37 @@ import com.vaadin.flow.internal.JacksonUtils;
 import com.vaadin.flow.server.Constants;
 import com.vaadin.flow.server.frontend.installer.NodeInstaller;
 import com.vaadin.flow.server.frontend.scanner.ClassFinder;
-import com.vaadin.flow.server.frontend.scanner.FrontendDependencies;
-import com.vaadin.flow.testcategory.SlowTests;
 
 import static com.vaadin.flow.server.Constants.PACKAGE_JSON;
 import static com.vaadin.flow.server.Constants.TARGET;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @NotThreadSafe
-@Category(SlowTests.class)
-public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
+@Tag("com.vaadin.flow.testcategory.SlowTests")
+class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
 
     private static final String PINNED_VERSION = "3.2.17";
-    private static final List<String> POSTINSTALL_PACKAGES = Collections
-            .singletonList("esbuild");
+    private static final List<String> POSTINSTALL_PACKAGES = List
+            .of("@vaadin/vaadin-usage-statistics");
 
     @Override
-    @Before
-    public void setUp() throws IOException, NoSuchFieldException {
+    @BeforeEach
+    void setUp() throws IOException, NoSuchFieldException {
         super.setUp();
 
         // create an empty package.json so as pnpm can be run without
         // error
-        FileUtils.write(new File(npmFolder, PACKAGE_JSON), "{}",
-                StandardCharsets.UTF_8);
+        Files.writeString(new File(npmFolder, PACKAGE_JSON).toPath(), "{}");
     }
 
     @Override
     @Test
-    public void runNpmInstall_toolIsChanged_nodeModulesIsRemoved()
+    void runNpmInstall_toolIsChanged_nodeModulesIsRemoved()
             throws ExecutionFailedException, IOException {
         File nodeModules = options.getNodeModulesFolder();
-        FileUtils.forceMkdir(nodeModules);
+        Files.createDirectories(nodeModules.toPath());
 
         // create a fake file in the node modules dir to check that it's
         // removed
@@ -79,12 +78,12 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         getNodeUpdater().modified = true;
         createTask().execute();
 
-        Assert.assertFalse(fakeFile.exists());
+        assertFalse(fakeFile.exists());
     }
 
     @Override
     @Test
-    public void runNpmInstall_toolIsNotChanged_nodeModulesIsNotRemoved()
+    void runNpmInstall_toolIsNotChanged_nodeModulesIsNotRemoved()
             throws ExecutionFailedException, IOException {
         File packageJson = new File(npmFolder, PACKAGE_JSON);
         packageJson.createNewFile();
@@ -92,9 +91,8 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         // create some package.json file so pnpm does some installation
         // into
         // node_modules folder
-        FileUtils.write(packageJson,
-                "{\"dependencies\": {" + "\"pnpm\": \"5.15.1\"}}",
-                StandardCharsets.UTF_8);
+        Files.writeString(packageJson.toPath(),
+                "{\"dependencies\": {" + "\"pnpm\": \"5.15.1\"}}");
 
         getNodeUpdater().modified = true;
         createTask().execute();
@@ -107,40 +105,40 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         getNodeUpdater().modified = true;
         createTask().execute();
 
-        Assert.assertTrue(fakeFile.exists());
+        assertTrue(fakeFile.exists());
     }
 
     @Test
-    public void generateVersionsJson_userHasNoCustomVersions_platformIsMergedWithDevDeps()
+    void generateVersionsJson_userHasNoCustomVersions_platformIsMergedWithDevDeps()
             throws IOException {
         File packageJson = new File(npmFolder, PACKAGE_JSON);
         packageJson.createNewFile();
 
         // Write package json file
-        FileUtils.write(packageJson, "{}", StandardCharsets.UTF_8);
+        Files.writeString(packageJson.toPath(), "{}");
 
-        File versions = temporaryFolder.newFile();
+        File versions = File.createTempFile("tmp", null, temporaryFolder);
         // Platform defines a pinned version
         // @formatter:off
-        FileUtils.write(versions, String.format(
+        Files.writeString(versions.toPath(), String.format(
                 "{"
                   + "\"vaadin-overlay\": {"
                     + "\"npmName\": \"@vaadin/vaadin-overlay\","
                     + "\"jsVersion\": \"%s\""
                   + "}"
-                + "}", PINNED_VERSION), StandardCharsets.UTF_8);
+                + "}", PINNED_VERSION));
         // @formatter:on
 
         JsonNode object = getGeneratedVersionsContent(versions, packageJson);
-        Assert.assertTrue(object.has("@vaadin/vaadin-overlay"));
+        assertTrue(object.has("@vaadin/vaadin-overlay"));
 
         // Platform version takes precedence over dev deps
-        Assert.assertEquals(PINNED_VERSION,
+        assertEquals(PINNED_VERSION,
                 object.get("@vaadin/vaadin-overlay").asString());
     }
 
     @Test
-    public void generateVersionsJson_userDefinedVersions_versionOnlyPinnedForNotAddedDependencies()
+    void generateVersionsJson_userDefinedVersions_versionOnlyPinnedForNotAddedDependencies()
             throws IOException {
         File packageJson = new File(npmFolder, PACKAGE_JSON);
         packageJson.createNewFile();
@@ -151,7 +149,7 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         String notificationVersion = "1.4.0";
         String uploadVersion = "4.2.0";
         // @formatter:off
-        FileUtils.write(packageJson, String.format(
+        Files.writeString(packageJson.toPath(), String.format(
                 "{"
                     + "\"vaadin\": {"
                       + "\"dependencies\": {"
@@ -170,7 +168,7 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 + "}",
                 loginVersion, "1.0.0", notificationVersion,
                 "4.0.0", loginVersion, menuVersion, notificationVersion,
-                uploadVersion), StandardCharsets.UTF_8);
+                uploadVersion));
         // @formatter:on
         // Platform defines a pinned version
 
@@ -179,9 +177,9 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         String versionsNotificationVersion = "1.5.0-alpha1";
         String versionsUploadVersion = "4.2.0-beta2";
 
-        File versions = temporaryFolder.newFile();
+        File versions = File.createTempFile("tmp", null, temporaryFolder);
         // @formatter:off
-        FileUtils.write(versions,String.format(
+        Files.writeString(versions.toPath(), String.format(
                 "{"
                     + "\"vaadin-login\": {"
                         + "\"npmName\": \"@vaadin/vaadin-login\","
@@ -201,35 +199,34 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                     + "}"
                 + "}",
                 versionsLoginVersion, versionsMenuBarVersion,
-                versionsNotificationVersion, versionsUploadVersion), StandardCharsets.UTF_8);
+                versionsNotificationVersion, versionsUploadVersion));
         // @formatter:on
 
         JsonNode generatedVersions = getGeneratedVersionsContent(versions,
                 packageJson);
 
-        Assert.assertEquals("Login version is the same for user and platform.",
-                loginVersion,
-                generatedVersions.get("@vaadin/vaadin-login").asString());
-        Assert.assertEquals("Notification version should use platform",
-                versionsNotificationVersion, generatedVersions
-                        .get("@vaadin/vaadin-notification").asString());
+        assertEquals(loginVersion,
+                generatedVersions.get("@vaadin/vaadin-login").asString(),
+                "Login version is the same for user and platform.");
+        assertEquals(versionsNotificationVersion,
+                generatedVersions.get("@vaadin/vaadin-notification").asString(),
+                "Notification version should use platform");
     }
 
     @Test
-    public void runPnpmInstall_npmRcFileNotFound_newNpmRcFileIsGenerated()
+    void runPnpmInstall_npmRcFileNotFound_newNpmRcFileIsGenerated()
             throws IOException, ExecutionFailedException {
         TaskRunNpmInstall task = createTask();
         task.execute();
 
         File npmRcFile = new File(npmFolder, ".npmrc");
-        Assert.assertTrue(npmRcFile.exists());
-        String content = FileUtils.readFileToString(npmRcFile,
-                StandardCharsets.UTF_8);
-        Assert.assertTrue(content.contains("shamefully-hoist"));
+        assertTrue(npmRcFile.exists());
+        String content = Files.readString(npmRcFile.toPath());
+        assertTrue(content.contains("shamefully-hoist"));
     }
 
     @Test
-    public void runPnpmInstall_npmRcFileGeneratedByVaadinFound_npmRcFileIsGenerated()
+    void runPnpmInstall_npmRcFileGeneratedByVaadinFound_npmRcFileIsGenerated()
             throws IOException, ExecutionFailedException {
         File oldNpmRcFile = new File(npmFolder, ".npmrc");
         // @formatter:off
@@ -237,43 +234,39 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 + "shamefully-hoist=true\n"
                 + "symlink=true\n";
         // @formatter:on
-        FileUtils.writeStringToFile(oldNpmRcFile, originalContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(oldNpmRcFile.toPath(), originalContent);
 
         TaskRunNpmInstall task = createTask();
         task.execute();
 
         File newNpmRcFile = new File(npmFolder, ".npmrc");
-        Assert.assertTrue(newNpmRcFile.exists());
-        String content = FileUtils.readFileToString(newNpmRcFile,
-                StandardCharsets.UTF_8);
-        Assert.assertTrue(content.contains("shamefully-hoist"));
-        Assert.assertFalse(content.contains("symlink=true"));
+        assertTrue(newNpmRcFile.exists());
+        String content = Files.readString(newNpmRcFile.toPath());
+        assertTrue(content.contains("shamefully-hoist"));
+        assertFalse(content.contains("symlink=true"));
     }
 
     @Test
-    public void runPnpmInstall_customNpmRcFileFound_npmRcFileIsNotGenerated()
+    void runPnpmInstall_customNpmRcFileFound_npmRcFileIsNotGenerated()
             throws IOException, ExecutionFailedException {
         File oldNpmRcFile = new File(npmFolder, ".npmrc");
         // @formatter:off
         String originalContent = "# A custom npmrc file for my project\n"
                 + "symlink=true\n";
         // @formatter:on
-        FileUtils.writeStringToFile(oldNpmRcFile, originalContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(oldNpmRcFile.toPath(), originalContent);
 
         TaskRunNpmInstall task = createTask();
         task.execute();
 
         File newNpmRcFile = new File(npmFolder, ".npmrc");
-        Assert.assertTrue(newNpmRcFile.exists());
-        String content = FileUtils.readFileToString(newNpmRcFile,
-                StandardCharsets.UTF_8);
-        Assert.assertEquals(originalContent, content);
+        assertTrue(newNpmRcFile.exists());
+        String content = Files.readString(newNpmRcFile.toPath());
+        assertEquals(originalContent, content);
     }
 
     @Test
-    public void runPnpmInstall_userVersionNewerThanPinned_installedOverlayVersionIsNotSpecifiedByPlatform()
+    void runPnpmInstall_userVersionNewerThanPinned_installedOverlayVersionIsNotSpecifiedByPlatform()
             throws IOException, ExecutionFailedException {
         File packageJson = new File(npmFolder, PACKAGE_JSON);
         packageJson.createNewFile();
@@ -289,8 +282,7 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 + "}"
             + "}";
         // @formatter:on
-        FileUtils.write(packageJson, packageJsonContent,
-                StandardCharsets.UTF_8);
+        Files.writeString(packageJson.toPath(), packageJsonContent);
 
         final VersionsJsonFilter versionsJsonFilter = new VersionsJsonFilter(
                 JacksonUtils.readTree(packageJsonContent),
@@ -308,69 +300,78 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 "@vaadin/vaadin-overlay/package.json");
 
         // The resulting version should be the one specified by the user
-        JsonNode overlayPackage = JacksonUtils.readTree(FileUtils
-                .readFileToString(overlayPackageJson, StandardCharsets.UTF_8));
-        Assert.assertEquals(customOverlayVersion,
+        JsonNode overlayPackage = JacksonUtils
+                .readTree(Files.readString(overlayPackageJson.toPath()));
+        assertEquals(customOverlayVersion,
                 overlayPackage.get("version").asString());
     }
 
     @Test
-    public void runPnpmInstall_postInstall_runOnlyForDefaultPackages()
+    void runPnpmInstall_postInstall_runOnlyForDefaultPackages()
             throws ExecutionFailedException, IOException {
-        setupEsbuildAndFooInstallation();
+        setupPostinstallPackages();
         TaskRunNpmInstall task = createTask();
         task.execute();
 
-        Assert.assertTrue("Postinstall for 'esbuild' was not run",
-                new File(new File(options.getNodeModulesFolder(), "esbuild"),
-                        "postinstall-file.txt").exists());
-        Assert.assertFalse("Postinstall for 'foo' should not have been run",
+        assertTrue(
+                new File(
+                        new File(options.getNodeModulesFolder(),
+                                "@vaadin/vaadin-usage-statistics"),
+                        "postinstall-file.txt").exists(),
+                "Postinstall for '@vaadin/vaadin-usage-statistics' was not run");
+        assertFalse(
                 new File(new File(options.getNodeModulesFolder(), "foo"),
-                        "postinstall-file.txt").exists());
+                        "postinstall-file.txt").exists(),
+                "Postinstall for 'foo' should not have been run");
     }
 
     @Test
-    public void runPnpmInstall_postInstall_runForDefinedAdditionalPackages()
+    void runPnpmInstall_postInstall_runForDefinedAdditionalPackages()
             throws ExecutionFailedException, IOException {
-        setupEsbuildAndFooInstallation();
-        TaskRunNpmInstall task = createTask(Collections.singletonList("foo"));
+        setupPostinstallPackages();
+        TaskRunNpmInstall task = createTask(List.of("foo"));
         task.execute();
 
-        Assert.assertTrue("Postinstall for 'esbuild' was not run",
-                new File(new File(options.getNodeModulesFolder(), "esbuild"),
-                        "postinstall-file.txt").exists());
-        Assert.assertTrue("Postinstall for 'foo' was not run",
+        assertTrue(
+                new File(
+                        new File(options.getNodeModulesFolder(),
+                                "@vaadin/vaadin-usage-statistics"),
+                        "postinstall-file.txt").exists(),
+                "Postinstall for '@vaadin/vaadin-usage-statistics' was not run");
+        assertTrue(
                 new File(new File(options.getNodeModulesFolder(), "foo"),
-                        "postinstall-file.txt").exists());
+                        "postinstall-file.txt").exists(),
+                "Postinstall for 'foo' was not run");
     }
 
     // https://github.com/vaadin/flow/issues/17663
-    @Test(timeout = 30000)
-    public void runNpmInstall_postInstallWritingLotsOfOutput_processDoesNotStuck()
+    @Test
+    @Timeout(30)
+    void runNpmInstall_postInstallWritingLotsOfOutput_processDoesNotStuck()
             throws ExecutionFailedException, IOException {
-        setupEsbuildAndFooInstallation();
+        setupPostinstallPackages();
 
         File nodeModules = options.getNodeModulesFolder();
         File fooPackageJson = new File(
                 new File(nodeModules.getParentFile(), "fake-foo"),
                 "package.json");
-        String fooPackageJsonContents = IOUtils.toString(
-                getClass().getResourceAsStream(
-                        "fake-package-with-postinstall-writing-to-console.json"),
-                StandardCharsets.UTF_8);
-        FileUtils.write(fooPackageJson, fooPackageJsonContents,
-                StandardCharsets.UTF_8);
+        String fooPackageJsonContents = new String(getClass()
+                .getResourceAsStream(
+                        "fake-package-with-postinstall-writing-to-console.json")
+                .readAllBytes(), StandardCharsets.UTF_8);
+        Files.writeString(fooPackageJson.toPath(), fooPackageJsonContents);
 
-        TaskRunNpmInstall task = createTask(Collections.singletonList("foo"));
+        TaskRunNpmInstall task = createTask(List.of("foo"));
         task.execute();
 
-        Assert.assertTrue("Postinstall for 'foo' was not run",
+        assertTrue(
                 new File(new File(options.getNodeModulesFolder(), "foo"),
-                        "postinstall-console-file.txt").exists());
+                        "postinstall-console-file.txt").exists(),
+                "Postinstall for 'foo' was not run");
     }
 
     @Test
-    public void runPnpmInstallAndCi_emptyDir_pnpmInstallAndCiIsExecuted()
+    void runPnpmInstallAndCi_emptyDir_pnpmInstallAndCiIsExecuted()
             throws ExecutionFailedException, IOException {
         TaskRunNpmInstall task = createTask();
 
@@ -386,6 +387,41 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
         TaskRunNpmInstall ciTask = createCiTask();
         ciTask.execute();
         Mockito.verify(logger).info(getRunningMsg());
+    }
+
+    @Test
+    void runPnpmInstall_devMode_usesNoFrozenLockfile()
+            throws ExecutionFailedException, IOException {
+        TaskRunNpmInstall task = createTask();
+        getNodeUpdater().modified = true;
+
+        task.execute();
+
+        ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
+        Mockito.verify(logger).info(
+                Mockito.eq("using '{}' for frontend package installation"),
+                captor.capture());
+        assertTrue(captor.getValue().contains("--no-frozen-lockfile"),
+                "pnpm install in dev mode should use --no-frozen-lockfile");
+    }
+
+    @Test
+    void runPnpmInstall_ciBuild_usesFrozenLockfile()
+            throws ExecutionFailedException, IOException {
+        TaskRunNpmInstall ciTask = createCiTask();
+        getNodeUpdater().modified = true;
+
+        ciTask.execute();
+
+        ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
+        Mockito.verify(logger).info(
+                Mockito.eq("using '{}' for frontend package installation"),
+                captor.capture());
+        String command = captor.getValue();
+        assertTrue(command.contains("--frozen-lockfile"),
+                "pnpm install in CI build should use --frozen-lockfile");
+        assertFalse(command.contains("--no-frozen-lockfile"),
+                "pnpm install in CI build should not use --no-frozen-lockfile");
     }
 
     @Override
@@ -434,8 +470,8 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
                 classFinder.getResource(Constants.VAADIN_CORE_VERSIONS_JSON))
                 .thenReturn(versions.toURI().toURL());
 
-        ObjectNode packageJson = JacksonUtils.readTree(FileUtils
-                .readFileToString(packageJsonFile, StandardCharsets.UTF_8));
+        ObjectNode packageJson = JacksonUtils
+                .readTree(Files.readString(packageJsonFile.toPath()));
         getNodeUpdater().generateVersionsJson(packageJson);
         return getNodeUpdater().versionsJson;
     }
@@ -455,8 +491,7 @@ public class TaskRunPnpmInstallTest extends TaskRunNpmInstallTest {
     private NodeUpdater createNodeUpdater(String versionsContent) {
         options.withBuildDirectory(TARGET);
 
-        return new NodeUpdater(Mockito.mock(FrontendDependencies.class),
-                options) {
+        return new NodeUpdater(options) {
 
             @Override
             public void execute() {
